BC-426 | Updated submission search filter to include succeeded and failed submission choices